:bug: fix: correção do botão light e dark mode

--- a/style.css
+++ b/style.css
@@ -12,11 +12,10 @@
   --text-color: white;
   --bg-url: url(./assets/bg-mobile.jpg);
   --stroke-color: rgba(255, 255, 255, 0.5 );
-  --surface-color: rgba(255, 255, 255, 0.1);
-  --surface-color-hover: rgba(0, 0, 0, 0.05);
+  --surface-color: rgba(255, 255, 255, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
-  --switch-bg-url: url(./assets/moon-stars.svg);
-  --switch-bg-url: url(./assets/sun.svg);
+  --switch-bg-url: url(./assets/Moonstars.svg);
 }
 
 .light {
@@ -26,7 +25,8 @@
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.1);
-
+  --switch-bg-url: url(./assets/sun.svg);
+  
 }
 
 /* Caixa do Body */
@@ -87,7 +87,7 @@ body * {
   border-radius: 50%;
   position: absolute;
   top: 50%;
-  right: 0;
+  left: 0;
   z-index: 1;
   transform: translateY(-50%);
 }
@@ -96,8 +96,6 @@ body * {
   right: 0;
   left: initial;
 }
-
-
 
 #switch span {
   display: block;
